// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expanding (with merge) style objects should expand and merge border properties in nested objects 1`] = `
Object {
  "borderBottomColor": "grey",
  "borderBottomStyle": "solid",
  "borderBottomWidth": "1px",
  "borderLeftColor": "black",
  "borderLeftStyle": "dotted",
  "borderLeftWidth": "2px",
  "borderRightColor": "grey",
  "borderRightStyle": "solid",
  "borderRightWidth": "1px",
  "borderTopColor": "grey",
  "borderTopStyle": "solid",
  "borderTopWidth": "1px",
}
`;

exports[`Expanding (with merge) style objects should expand and merge multiple border properties in nested objects 1`] = `
Object {
  "borderBottomColor": "grey",
  "borderBottomStyle": "solid",
  "borderBottomWidth": "7px",
  "borderLeftColor": "black",
  "borderLeftStyle": "dotted",
  "borderLeftWidth": "10px",
  "borderRightColor": "grey",
  "borderRightStyle": "solid",
  "borderRightWidth": "6px",
  "borderTopColor": "grey",
  "borderTopStyle": "solid",
  "borderTopWidth": "5px",
}
`;

exports[`Expanding (with merge) style objects should expand and merge properties in nested objects 1`] = `
Object {
  ":hover": Object {
    "borderBottomWidth": "10px",
    "borderLeftWidth": "4px",
    "borderRightWidth": "2px",
    "borderTopWidth": "5px",
  },
  "paddingBottom": "15px",
  "paddingLeft": "10px",
  "paddingRight": "10px",
  "paddingTop": "20px",
}
`;

exports[`Expanding (with merge) style objects should expand and merge properties with non-undefined values 1`] = `
Object {
  "paddingBottom": 0,
  "paddingLeft": null,
  "paddingRight": undefined,
  "paddingTop": "20px",
}
`;
